[project]
name = "algorithms-in-python"
version = "0.1.0"
description = "Homework assignments for the course 'Algorithms in Python' in the Master's program 'Machine Learning in a Digital Product' (HSE University, Faculty of Computer Science & Avito)"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = ["pytest==8.4.2"]
